Day-= 27 - 重複的程式碼，是一種原罪
