# internal/controller/help.go
@@ -1,9 +1,0 @@
-package controller
-
-type GeneralSuccessResponse struct {
-	Data interface{} `json:"data"`
-}
-
-type GeneralErrorResponse struct {
-	Error string `json:"error"`
-}
